fix overflow

--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ details:open {
 }
 
 details a {
+    white-space: nowrap;
+    overflow:hidden;
+    text-overflow: ellipsis;
     font-weight: normal;
     align-self: center;
     margin-left: 25px;
